--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -129,6 +129,12 @@ jobs:
         architecture: [x64, ia32, arm64]
         electron:
           [
+            25.9.0,
+            25.8.0,
+            25.7.0,
+            25.6.0,
+            25.5.0,
+            25.4.0,
             25.3.0,
             25.2.0,
             25.1.0,
@@ -191,6 +197,18 @@ jobs:
             target_architecture: x64
           - architecture: x64
             node: 16.13.2
+          - electron: 25.9.0
+            node: 18.15.0
+          - electron: 25.8.0
+            node: 18.15.0
+          - electron: 25.7.0
+            node: 18.15.0
+          - electron: 25.6.0
+            node: 18.15.0
+          - electron: 25.5.0
+            node: 18.15.0
+          - electron: 25.4.0
+            node: 18.15.0
           - electron: 25.3.0
             node: 18.15.0
           - electron: 25.2.0
